Update 'f5h36a32f-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:97f6ec09610a52717761bcccaba50709e1a7b336@sha256:097e04c223c403f6a85d54dec633c3f85a8620f099ca4db83863dc36b6954527

--- a/components/f5h36a32f-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/f5h36a32f-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: f5h36a32f-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:97f6ec09610a52717761bcccaba50709e1a7b336@sha256:097e04c223c403f6a85d54dec633c3f85a8620f099ca4db83863dc36b6954527
+          name: container-image
